--- a/www/assets/bundle.css
+++ b/www/assets/bundle.css
@@ -6898,5 +6898,14 @@ input[type="search"].search-input::-webkit-search-cancel-button {
   -o-transform: scale(0);
   transform: scale(0);
 }
+@charset "UTF-8";
+/* テーマカラー*/
+/* ボタン */
+.button, button:active, .button--material, .button--material:active {
+  background-color: #1976D2; }
+
+/* ナビゲーションバー */
+.navigation-bar--material {
+  background-color: #1976D2; }
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJidW5kbGUuY3NzIiwic291cmNlUm9vdCI6IiJ9*/
