--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 $primary: #1976D2;
 
 /* ボタン */
-.button, button:active, .button--material, .button--material:active {
+.button, .button:active, .button--material, .button--material:active {
     background-color: $primary;
 }
 
