--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,6 +7,8 @@ $primary: #009688;
 }
 
 /* ナビゲーションバー */
-.navigation-bar--material {
-    background-color: $primary;
+.navigation-bar {
+    &--material {
+        background-color: $primary;
+    }
 }
