--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body ng-cloak ng-strict-di>
-    <ons-navigator var="navi" page="pages/page1.html"></ons-navigator>
+    <ons-navigator var="navi" page="html/page1.html"></ons-navigator>
 </body>
 
 </html>
