--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,7 +7,7 @@
 <meta name="format-detection" content="telephone=no" />
 <meta name="msapplication-tap-highlight" content="no" />
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-<meta http-equiv="Content-Security-Policy" content="default-src * gap: ws: https://ssl.gstatic.com;style-src 'self' 'unsafe-inline' data: blob:; script-src * 'unsafe-inline' 'unsafe-eval' data: blob:; font-src * data:; img-src * data:;">
+<meta http-equiv="Content-Security-Policy" content="default-src * data: gap: ws: https://ssl.gstatic.com;style-src 'self' 'unsafe-inline' data: blob:; script-src * 'unsafe-inline' 'unsafe-eval' data: blob:; font-src * data:; img-src * data:;">
 <script type="text/javascript" src="cordova.js"></script>
 
 <title>Hello World</title>
