--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,14 @@
     }
 }
 
+/* ツールバーボタン */
+.toolbar-button {
+    color: var(--primary-color);
+    &--material {
+        color: #fff;
+    }
+}
+
 /* スプリッタの横の枠線 */
 ons-splitter-side[mode="split"] {
     border-right: solid 1px #eee;
